objects/Project_Training_Detail__c.object
<CustomObject>
    <description>Contains information related to Training Module, Dealership Name and associated with a SubProject.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership_Name__c</fullName>
        <label>Dealership Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participants__c</fullName>
        <label>Participant(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Project Training Details</relationshipLabel>
        <relationshipName>Project_Training_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubProject__c</fullName>
        <label>SubProject</label>
        <referenceTo>SubProject__c</referenceTo>
        <relationshipLabel>Project Training Details</relationshipLabel>
        <relationshipName>Project_Training_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Training_Date__c</fullName>
        <label>Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Module__c</fullName>
        <label>Training Module</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Virtual_Implementation_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Virtual Implementation Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Training_Details_Virtual_Impl</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Training Detail</label>
    <nameField>
        <displayFormat>TD-{0000000000}</displayFormat>
        <label>Training Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Training Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>